--- a/QA/QA.html
+++ b/QA/QA.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="QA.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no, viewport-fit=cover" />
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <title>Playday</title>
@@ -47,9 +47,9 @@
         <div class="right">
             <a class="iconhome"
                     title="HOME"
-                    href="index.html">
+                    href="../index.html">
                 <img
-                    src="playday/bug.jpg" alt="Home">
+                        src="playday/bug.jpg" alt="Home">
             </a>
         </div>
     </div>
@@ -77,7 +77,7 @@
         <div class="right">
                 <a class="iconhome"
                    title="HOME"
-                   href="index.html">
+                   href="../index.html">
                     <img
                             src="playday/bug.jpg" alt="Home">
                 </a>
@@ -98,7 +98,7 @@
         <div class="right">
             <a class="iconhome"
                title="HOME"
-               href="index.html">
+               href="../index.html">
                 <img
                         src="playday/bug.jpg" alt="Home">
             </a>
@@ -139,7 +139,7 @@
         <div class="right">
             <a class="iconhome"
                title="HOME"
-               href="index.html">
+               href="../index.html">
                 <img
                         src="playday/bug.jpg" alt="Home">
             </a>
@@ -157,7 +157,7 @@
         <div class="right">
             <a class="iconhome"
                title="HOME"
-               href="index.html">
+               href="../index.html">
                 <img
                         src="playday/bug.jpg" alt="Home">
             </a>
@@ -175,7 +175,7 @@
         <div class="right">
             <a class="iconhome"
                title="HOME"
-               href="index.html">
+               href="../index.html">
                 <img
                         src="playday/bug.jpg" alt="Home">
             </a>
@@ -196,7 +196,7 @@
         <div class="right">
             <a class="iconhome"
                title="HOME"
-               href="index.html">
+               href="../index.html">
                 <img
                         src="playday/bug.jpg" alt="Home">
             </a>
@@ -214,7 +214,7 @@
         <div class="right">
             <a class="iconhome"
                title="HOME"
-               href="index.html">
+               href="../index.html">
                 <img
                         src="playday/bug.jpg" alt="Home">
             </a>
@@ -232,7 +232,7 @@
         <div class="right">
             <a class="iconhome"
                title="HOME"
-               href="index.html">
+               href="../index.html">
                 <img
                         src="playday/bug.jpg" alt="Home">
             </a>
@@ -250,7 +250,7 @@
         <div class="right">
             <a class="iconhome"
                title="HOME"
-               href="index.html">
+               href="../index.html">
                 <img
                         src="playday/bug.jpg" alt="Home">
             </a>
@@ -268,7 +268,7 @@
         <div class="right">
             <a class="iconhome"
                title="HOME"
-               href="index.html">
+               href="../index.html">
                 <img
                         src="playday/bug.jpg" alt="Home">
             </a>
@@ -286,7 +286,7 @@
         <div class="right">
             <a class="iconhome"
                title="HOME"
-               href="index.html">
+               href="../index.html">
                 <img
                         src="playday/bug.jpg" alt="Home">
             </a>
@@ -304,7 +304,7 @@
         <div class="right">
             <a class="iconhome"
                title="HOME"
-               href="index.html">
+               href="../index.html">
                 <img
                         src="playday/bug.jpg" alt="Home">
             </a>
@@ -322,7 +322,7 @@
         <div class="right">
             <a class="iconhome"
                title="HOME"
-               href="index.html">
+               href="../index.html">
                 <img src="playday/bug.jpg" alt="Home">
             </a>
         </div>
@@ -338,15 +338,143 @@
         <div class="right">
             <a class="iconhome"
                title="HOME"
-               href="index.html">
+               href="../index.html">
                 <img src="playday/bug.jpg" alt="Home">
             </a>
         </div>
     </div>
 
 
-    <div>
     <div class="row">
+        <div class="left">
+        </div>
+        <div class="center">
+            <p>
+            <h1>Users — добавить задание сотруднику</h1>
+            <h3>Задача</h3>
+
+            <b>
+                Выполнить тест-кейс «Добавить задание сотруднику».
+            </b>
+            <br/>
+            <b>
+                Совпадает ли фактический результат с ожидаемым?
+            </b>
+
+            <p>
+                <i>Комментарий</i>: На каждый шаг я написала <span class="gold">Ожидаемый результат</span> и
+            <span class="golden">Фактический результат.</span>
+            <p>К общему результату я написала комментарии. Мне, как новичку, часто не хватало шагов и
+            пояснений к шагам, хотелось всего более подробного.
+            </p>
+
+
+            <h5>Шаги</h5>
+            <ol>
+                <li>Перейти в раздел «Задачи» под менеджером — http://users.bugred.ru/tasks/index.html</li>
+            </ol>
+            <p class="gold">Ожидаемый результат:</p>
+            <p>
+                Перейти в раздел «Задачи» под менеджером — http://users.bugred.ru/tasks/index.html
+            </p>
+            <p class="golden">Фактический результат:</p>
+            <ul>
+                <li>Зайти на сайт http://users.bugred.ru/tasks/index.html</li>
+                <li>Авторизоваться под менеджер manager@mail.ru / 1</li>
+                <li>Найти и нажать на раздел «Задачи»</li>
+            </ul>
+
+
+            <ol>
+                <li>Нажать кнопку «Добавить задачу»</li>
+
+            <p class="gold">Ожидаемый результат:</p>
+            <p>
+                После нажатия на кнопку «Добавить задачу», откроется страница с полем для заполнения добавления задач.
+            </p>
+            <p class="golden">Фактический результат:</p>
+            <p>
+                Открылось поле для добавления задач.
+             </p>
+
+
+                <li>Заполнить поля:</li>
+
+            <ul>
+                <li>Название задачи — «Тест»</li>
+                <li>Описание задачи — «Описание 1»</li>
+                <li>Ответственный — Петя</li>
+            </ul>
+                <p class="gold">Ожидаемый результат:</p>
+                <p>Все поля можно заполнить</p>
+                <p class="golden">Фактический результат:</p>
+                <p>Все поля заполнились соответствующим образом</p>
+
+
+                <li>Нажать кнопку «Добавить задачу»</li>
+            Ожидаемый результат:
+            Кнопка «Добавить задачу» сработала
+            Фактический результат:
+            Задача добавилась. Было 302 задачи, стало 303.
+
+
+
+                <li>Зайти в систему под Петей</li>
+            Фактический результат:
+            Выйти из системы под логином Менеджер.
+            Войти под «Петей»
+            Ожидаемый результат:
+            Зашли в систему под Петей
+            </ol>
+            Результат:
+
+            1.	На главной странице слева от нашего имени теперь написано «33 заданий»
+
+            Комментарий: некорректно склоняется слово «заданий».
+
+            Было 32 задания
+
+
+
+            Стало 33 задания
+
+
+            2. Если нажать на эту фразу, то попадаем в раздел заданий на вкладку «Текущие задачи». В таблице одно задание (или сколько было исходно заданий + 1) — «Тест», с пустым расписанием. И две кнопки:
+            •	сделал
+            •	продолбал
+
+            Комментарий: Трудно было понять, что за «фраза» - не кнопка, не опция, а почему-то фраза. Всё остальное понятно и ок.
+
+
+            3. Если нажать на число слева от фразы «1 задание» (количество уведомлений), то попадем на страницу «Все непрочитанные уведомления», а там в таблице верхняя строка будет такой:
+            •	Дата — время создания задачи (когда мы выполнили пункт 4, то есть несколько минут назад)
+            •	Уведомление — «Для вас создали задачу»
+            •	Задача — «Тест»
+
+            Комментарий: Опять присутствует мной непонятная «фраза», а всё остальное проверено и работает.
+            </p>
+            </p>
+
+
+
+
+        </div>
+        <div class="right">
+            <a class="iconhome"
+               title="HOME"
+               href="../index.html">
+                <img src="playday/bug.jpg" alt="Home">
+            </a>
+        </div>
+    </div>
+
+
+
+    <div class="row">
+        <div class="left">
+        </div>
+        <div class="center">
+
             <h1>
                 Тестируем стул!
             </h1>
@@ -423,12 +551,31 @@
             <p>
                 Стул прошёл тестирование, можно закупать партию.
             </p>
+
+        </div>
+        <div class="right">
+            <a class="iconhome"
+               title="HOME"
+               href="../index.html">
+                <img
+                        src="playday/bug.jpg" alt="Home">
+            </a>
         </div>
     </div>
 
-
-
 </div>
+
+
+Users — добавить задание сотруднику
+Перед тем, как писать собственный тест-кейс, давайте попробуем пройтись по чужому!
+
+.
+
+Ваша задача
+
+Выполнить тест-кейс «Добавить задание сотруднику».
+
+Совпадает ли фактический результат с ожидаемым?
 
 </body>
 </html>
