--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			</div>
 			<div class="menu-item">
 				<a class="menu-link"
-				   href="QA.html">
+				   href="/QA.html">
 					Проект: QA/Software tester
 				</a>
 			</div>
@@ -173,6 +173,7 @@
 
 		</div>
 	</div>
+
 
 
 
