--- a/mybodylove.html
+++ b/mybodylove.html
@@ -47,90 +47,98 @@
 		 +1 размер), как я занимаюсь спортом, хожу по врачам - болею и лечусь. Расскажу обо всём, что касается моего тела.</p>
 </div>
 	<div class="boxfirstpage">
-	
-	<h1>Один из главных проектов в моей жизни - МОЁ ТЕЛО</h1>
 
-	    <p>Я РАЗНАЯ: толстая, худая, вредная, любящая, но есть критерии, при соблюдении которых,
-			я чувствую себя в себе, а вот когда выхожу за рамки, действительно я - не я.</p>
-		<p>Сечас я вешу около 75 кг, но идеально себя чувствую при 72-73 кг.
-			Война идёт всю жизнь, прыгая с 90 до 75 туда-сюда.</p>
+			<div class="row">
+				<div class="left"></div>
+				<div class="center">
 
-		<div class="box">
-	<div class="box-inner">
-		<a href="#">
-			<img src="images/2021.jpg" width="500">
-		</a>
-		<div class="text">
-			<h2>37 лет. 75кг</h2>
-		</div>
-	</div>
-</div>
+								<h1>Один из главных проектов в моей жизни - МОЁ ТЕЛО</h1>
 
-<div class="box">
-	<div class="box-inner">
-		<a href="#">
-			<img src="images/2019-2020.jpg" width="500">
-		</a>
-		<div class="text">
-			<h2>82-73кг</h2>
-		</div>
-	</div>
-</div>
+							<p>Я РАЗНАЯ: толстая, худая, вредная, любящая, но есть критерии, при соблюдении которых,
+								я чувствую себя в себе, а вот когда выхожу за рамки, действительно я - не я.</p>
+							<p>Сечас я вешу около 75 кг, но идеально себя чувствую при 72-73 кг.
+								Война идёт всю жизнь, прыгая с 90 до 75 туда-сюда.</p>
 
-<div class="box">
-	<div class="box-inner">
-		<a href="#">
-			<img src="images/2012.jpg" width="500">
-		</a>
-		<div class="text">
-			<h2>2012 год. Мне 26 лет.</h2>
-		</div>
-	</div>
-</div>
+							<div class="box">
+						<div class="box-inner">
+							<a href="#">
+								<img src="images/2021.jpg" width="500">
+							</a>
+							<div class="text">
+								<h2>37 лет. 75кг</h2>
+							</div>
+						</div>
 
-<div class="box">
-	<div class="box-inner">
-		<a href="#">
-			<img src="images/2013.jpg" width="500">
-		</a>
-		<div class="text">
-			<h2>2013 год. Мне 27 лет.</h2>
-		</div>
-	</div>
-</div>
 
-<div class="box">
-	<div class="box-inner">
-		<a href="#">
-			<img src="images/2014.jpg" width="500">
-		</a>
-		<div class="text">
-			<h2>2014 год. Мне 28 лет.</h2>
-		</div>
-	</div>
-</div>
+					<div class="box">
+						<div class="box-inner">
+							<a href="#">
+								<img src="images/2019-2020.jpg" width="500">
+							</a>
+							<div class="text">
+								<h2>82-73кг</h2>
+							</div>
+						</div>
+					</div>
 
-<div class="box">
-	<div class="box-inner">
-		<a href="#">
-			<img src="images/2016.jpg" width="500">
-		</a>
-		<div class="text">
-			<h2>2016 год. Мне 30 лет.</h2>
-		</div>
-	</div>
-</div>
+					<div class="box">
+						<div class="box-inner">
+							<a href="#">
+								<img src="images/2012.jpg" width="500">
+							</a>
+							<div class="text">
+								<h2>2012 год. Мне 26 лет.</h2>
+							</div>
+						</div>
+					</div>
 
-<div class="box">
-	<div class="box-inner">
-		<a href="#">
-			<img src="images/j2017.jpg" width="500">
-		</a>
-		<div class="text">
-			<h2>2017 год. Мне 31</h2>
-		</div>
-	</div>
-</div>
+					<div class="box">
+						<div class="box-inner">
+							<a href="#">
+								<img src="images/2013.jpg" width="500">
+							</a>
+							<div class="text">
+								<h2>2013 год. Мне 27 лет.</h2>
+							</div>
+						</div>
+					</div>
+
+					<div class="box">
+						<div class="box-inner">
+							<a href="#">
+								<img src="images/2014.jpg" width="500">
+							</a>
+							<div class="text">
+								<h2>2014 год. Мне 28 лет.</h2>
+							</div>
+						</div>
+					</div>
+
+					<div class="box">
+						<div class="box-inner">
+							<a href="#">
+								<img src="images/2016.jpg" width="500">
+							</a>
+							<div class="text">
+								<h2>2016 год. Мне 30 лет.</h2>
+							</div>
+						</div>
+					</div>
+
+					<div class="box">
+						<div class="box-inner">
+							<a href="#">
+								<img src="images/j2017.jpg" width="500">
+							</a>
+							<div class="text">
+								<h2>2017 год. Мне 31</h2>
+							</div>
+						</div>
+					</div>
+
+				</div>
+				<div class="right"></div>
+			</div>
 
 		<p><img src="images/ja2.jpg" alt="Фото1" title="ja2" width="200">
 		<img src="images/ja4.jpg" alt="Фото2" title="ja4" width="200">
