--- a/uzdevumi/Upes.html
+++ b/uzdevumi/Upes.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<?php
+include('DB.php');
+
+$select=SELECT `id`, `name`, `apraksts` FROM `latvijasupes1`;
+$result=$conn->query($select);
+while()
+
+?>
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="uzdevumi.css" type="text/css">
@@ -36,7 +46,7 @@
         <div class="left"></div>
         <div class="center">
         <div class="menurow">
-            <div class="mb"><a href="daugava.html">DAUGAVA</a></div>
+            <div class="mb"><a href="daugava.php">DAUGAVA</a></div>
             <div class="mb"><a href="gauja.html">GAUJA</a></div>
             <div class="mb"><a href="lielupe.html">LIELUPE</a></div>
 
