Upes.php add changes

--- a/2index.html
+++ b/2index.html
@@ -138,7 +138,7 @@
 					спектр удовольствия.
 				</p>
 				<h3>Режим дня Се и Сё: ЛЕТО</h3>
-			<table>
+			<table class="table">
 				<tr>
 					<th>Nr.</th>
 					<th>Действие</th>
@@ -200,22 +200,88 @@
 					<td>Сеня</td>
 				</tr>
 				<tr>
-					<td>9.</td>
+					<td>10.</td>
 					<td>Вечерние процедуры</td>
 					<td>с 20:30 до 20:59</td>
 					<td></td>
 				</tr>
 				<tr>
-					<td>10.</td>
+					<td>11.</td>
 					<td>Сон</td>
 					<td>с 21:00-22:00</td>
 					<td></td>
 				</tr>
-				<tr>
-					<td colspan="2">XXXXX<td/>
-				</tr>
 			</table>
-
+				<br/>
+				<h3>Режим дня Се и Сё: ОСЕНЬ</h3>
+				<table class="table">
+					<tr>
+						<th>Nr.</th>
+						<th>Действие</th>
+						<th>Время</th>
+						<th>Примечания</th>
+					</tr>
+					<tr>
+						<td>1.</td>
+						<td>Подъём</td>
+						<td>7:30-8:00</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>2.</td>
+						<td>Зарядка</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>3.</td>
+						<td>Чистка зубов</td>
+						<td>до 10:00</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>4.</td>
+						<td>Завтрак</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>5.</td>
+						<td>Сделать обязательное дело по дому</td>
+						<td>до 16:00</td>
+						<td>Во время учебы до 20.00</td>
+					</tr>
+					<tr>
+						<td>6.</td>
+						<td>Ужин</td>
+						<td>18:00-19:00</td>
+						<td>Едим мах. до 20.00</td>
+					</tr>
+					<tr>
+						<td>7.</td>
+						<td>Спокойные игры, тихие занятия</td>
+						<td>с 20:00</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>8.</td>
+						<td>Гуляние без родителей</td>
+						<td>до 19:00</td>
+						<td>Сеня</td>
+					</tr>
+					<tr>
+						<td>9.</td>
+						<td>Вечерние процедуры</td>
+						<td>с 20:30 до 20:59</td>
+						<td>Чистят зубы, подмываются</td>
+					</tr>
+					<tr>
+						<td>10.</td>
+						<td>Сон</td>
+						<td>с 21:00-22:00</td>
+						<td>Сеня: аудиосказка; Сёма: читает сам, читают ему</td>
+					</tr>
+				</table>
 			<div class="blockquotechildren">
 				<blockquote>
 				<p>Считает (выучил название десятков):</p>
@@ -332,6 +398,6 @@
 				</div>
 	</div>
 </div>
-
+</div>
 </body>
 </html>
