--- a/mybodylove.html
+++ b/mybodylove.html
@@ -39,114 +39,29 @@
 	</div>
 </div>
 
-<div class="boxpage">
+	<div class="boxpage">
 
-	<div class="borderbody"
-
-		 <p>На этой страничке я расскажу вам, как скачет мой вес +-20 кг, как растёт моя нога 43 размера (раз в год
-		 +1 размер), как я занимаюсь спортом, хожу по врачам - болею и лечусь. Расскажу обо всём, что касается моего тела.</p>
-</div>
-	<div class="boxfirstpage">
-
-			<div class="row">
-				<div class="left"></div>
-				<div class="center">
-
-								<h1>Один из главных проектов в моей жизни - МОЁ ТЕЛО</h1>
-
-							<p>Я РАЗНАЯ: толстая, худая, вредная, любящая, но есть критерии, при соблюдении которых,
-								я чувствую себя в себе, а вот когда выхожу за рамки, действительно я - не я.</p>
-							<p>Сечас я вешу около 75 кг, но идеально себя чувствую при 72-73 кг.
-								Война идёт всю жизнь, прыгая с 90 до 75 туда-сюда.</p>
-
-							<div class="box">
-						<div class="box-inner">
-							<a href="#">
-								<img src="images/2021.jpg" width="500">
-							</a>
-							<div class="text">
-								<h2>37 лет. 75кг</h2>
-							</div>
-						</div>
-
-
-					<div class="box">
-						<div class="box-inner">
-							<a href="#">
-								<img src="images/2019-2020.jpg" width="500">
-							</a>
-							<div class="text">
-								<h2>82-73кг</h2>
-							</div>
-						</div>
-					</div>
-
-					<div class="box">
-						<div class="box-inner">
-							<a href="#">
-								<img src="images/2012.jpg" width="500">
-							</a>
-							<div class="text">
-								<h2>2012 год. Мне 26 лет.</h2>
-							</div>
-						</div>
-					</div>
-
-					<div class="box">
-						<div class="box-inner">
-							<a href="#">
-								<img src="images/2013.jpg" width="500">
-							</a>
-							<div class="text">
-								<h2>2013 год. Мне 27 лет.</h2>
-							</div>
-						</div>
-					</div>
-
-					<div class="box">
-						<div class="box-inner">
-							<a href="#">
-								<img src="images/2014.jpg" width="500">
-							</a>
-							<div class="text">
-								<h2>2014 год. Мне 28 лет.</h2>
-							</div>
-						</div>
-					</div>
-
-					<div class="box">
-						<div class="box-inner">
-							<a href="#">
-								<img src="images/2016.jpg" width="500">
-							</a>
-							<div class="text">
-								<h2>2016 год. Мне 30 лет.</h2>
-							</div>
-						</div>
-					</div>
-
-					<div class="box">
-						<div class="box-inner">
-							<a href="#">
-								<img src="images/j2017.jpg" width="500">
-							</a>
-							<div class="text">
-								<h2>2017 год. Мне 31</h2>
-							</div>
-						</div>
-					</div>
-
-				</div>
-				<div class="right"></div>
+			<div class="borderbody">
+				<p>
+					На этой страничке я расскажу вам, как скачет мой вес +-20 кг, как растёт моя нога 43 размера (раз в год
+					+1 размер), как я занимаюсь спортом, хожу по врачам - болею и лечусь. Расскажу обо всём, что касается
+					моего тела.
+				</p>
 			</div>
 
-		<p><img src="images/ja2.jpg" alt="Фото1" title="ja2" width="200">
-		<img src="images/ja4.jpg" alt="Фото2" title="ja4" width="200">
-		<img src="images/ja5.jpg" alt="Фото3" title="ja5" width="200">
-		<img src="images/ja6.jpg" alt="Фото4" title="ja4" width="200"><
-		<img src="images/ja1.jpg" alt="Фото5" title="ja5" width="200"></p>
+				<h1>Один из главных проектов в моей жизни - МОЁ ТЕЛО</h1>
+		<div class="borderdate">
+				<p>
+					Я РАЗНАЯ: толстая, худая, вредная, любящая, но есть критерии, при соблюдении которых,
+					я чувствую себя в себе, а вот когда выхожу за рамки, действительно я - не я.
+				</p>
+		</div>
+				<p>
+					Сечас я вешу около 75 кг, но идеально себя чувствую при 72-73 кг.
+					Война идёт всю жизнь, прыгая с 90 до 75 туда-сюда.
+				</p>
 
-		<div class="borderbody"
+		<div class="borderbody">
 <p>Я вся такая несуразная, ну или в моменты позитивной волны, называю это эксклюзивностью💎) У меня всё ни как у людей🤷, том числе размер ноги👠. ⠀⠀
 ⠀
 У меня всегда был большой размер ноги👣, до лет 25 был 40👟. А потом рождение каждого ребёнка добавил мне ➕1. Теперь у меня 4️⃣2️⃣.
@@ -173,7 +88,21 @@
 А какой у вас размер ноги👣?
 
 	</div>
-</div>
+	</div>
+
+<img src="images/2021.jpg" alt="Фото1" title="ja2" width="200">
+<img src="images/2019-2020.jpg" alt="Фото1" title="ja2" width="200">
+<img src="images/2013.jpg" alt="Фото1" title="ja2" width="200">
+<img src="images/2014.jpg" alt="Фото1" title="ja2" width="200">
+<img src="images/2016.JPG" alt="Фото1" title="ja2" width="200">
+<img src="images/j2017.jpg" alt="Фото1" title="ja2" width="200">
+<img src="images/ja2.jpg" alt="Фото1" title="ja2" width="200">
+<img src="images/ja4.jpg" alt="Фото2" title="ja4" width="200">
+<img src="images/ja5.JPG" alt="Фото3" title="ja5" width="200">
+<img src="images/ja6.jpg" alt="Фото4" title="ja4" width="200">
+<img src="images/ja1.jpg" alt="Фото5" title="ja5" width="200">
+</p>
+							</div>
 
 </body>
 </html>
