--- a/uzdevumi/Uzdevums2.html
+++ b/uzdevumi/Uzdevums2.html
@@ -16,7 +16,7 @@
         <a class="menu-link" href="Uzdevums1.html">Uzdevums 1: Mūsu pasniedzēji</a>
     </div>
     <div class="menu-item">
-        <a class="menu-link" href="Upes.html">Uzdevums 3: Upes</a>
+        <a class="menu-link" href="Upes.php">Uzdevums 3: Upes</a>
     </div>
 
 </div>
