--- a/uzdevumi/lielupe.html
+++ b/uzdevumi/lielupe.html
@@ -17,7 +17,7 @@
                 <div class="upes-menu">
                     <div class="upes-name"><h1>LIELUPE</h1>
                     </div>
-                    <div class="upes-back"><a class="iconhome" title="HOME" href="Upes.html"><img src="../images/home.png" alt="Home"></a>
+                    <div class="upes-back"><a class="iconhome" title="HOME" href="Upes.php"><img src="../images/home.png" alt="Home"></a>
                     </div>
                 </div>
             </div>
