--- a/uzdevumi/maniuzdevumi.html
+++ b/uzdevumi/maniuzdevumi.html
@@ -38,7 +38,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="Upes.html">
+                    <a href="Upes.php">
                         <span><i class="fas fa-car"></i></span>
                         <span>Uzdevums 3: Upes</span>
                     </a>
