--- a/uzdevumi/Uzdevums1.html
+++ b/uzdevumi/Uzdevums1.html
@@ -15,7 +15,7 @@
         <a class="menu-link" href="Uzdevums2.html">Uzdevums 2: Mācību programmas</a>
     </div>
     <div class="menu-item">
-        <a class="menu-link" href="Upes.html">Uzdevums 3: Upes</a>
+        <a class="menu-link" href="Upes.php">Uzdevums 3: Upes</a>
     </div>
 
 </div>
