--- a/uzdevumi/gauja.html
+++ b/uzdevumi/gauja.html
@@ -16,7 +16,7 @@
             <div class="upes-menu">
                 <div class="upes-name"><h1>GAUJA</h1>
                 </div>
-                <div class="upes-back"><a class="iconhome" title="HOME" href="Upes.html"><img src="../images/home.png" alt="Home"></a>
+                <div class="upes-back"><a class="iconhome" title="HOME" href="Upes.php"><img src="../images/home.png" alt="Home"></a>
                 </div>
             </div>
         </div>
