--- a/uzdevumi/maniuzdevumi.html
+++ b/uzdevumi/maniuzdevumi.html
@@ -2,24 +2,17 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <link
-            rel="stylesheet"
-            href="uzdevumi.css"
-            type="text/css">
-
-    <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1.0 user-scalable=no, viewport-fit=cover"/>
-    <link
-            href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
-            rel="stylesheet">
+    <link rel="stylesheet" href="uzdevumi.css" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no, viewport-fit=cover"/>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 
     <title>maniuzdevumi</title>
 </head>
+
 <body class="menuuzd">
             <ul>
                 <li>
-                    <a href="../index.html">
+                    <a href="../pages/firstpage.php">
                         <span><i class="fas fa-bicycle"></i></span>
                         <span>Вернуться на главную</span>
 
@@ -38,13 +31,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="Upes.html">
+                    <a href="../uzdevumi/Upes.php">
                         <span><i class="fas fa-car"></i></span>
                         <span>Uzdevums 3: Upes</span>
                     </a>
                 </li>
                 <li>
-                    <a href="../formas/formas.html">
+                    <a href="../uzdevumi/formas/formas.html">
                         <span><i class="fas fa-helicopter"></i></span>
                         <span>Uzdevums 4: Formas</span>
                     </a>
