--- a/pages/mybodylove.html
+++ b/pages/mybodylove.html
@@ -42,7 +42,7 @@
 
 <div class="boxpage">
 
-	<div class="borderbody"
+	<div class="borderbody">
 
 		 <p>На этой страничке я расскажу вам, как скачет мой вес +-20 кг, как растёт моя нога 43 размера (раз в год
 		 +1 размер), как я занимаюсь спортом, хожу по врачам - болею и лечусь. Расскажу обо всём, что касается моего тела.</p>
@@ -147,8 +147,9 @@
 		<img src="../images/ja6.jpg" alt="Фото4" title="ja4" width="200"><
 		<img src="../images/ja1.jpg" alt="Фото5" title="ja5" width="200"></p>
 
-		<div class="borderbody"
-<p>Я вся такая несуразная, ну или в моменты позитивной волны, называю это эксклюзивностью💎) У меня всё ни как у людей🤷, том числе размер ноги👠. ⠀⠀
+		<div class="borderbody">
+<p>Я вся такая несуразная, ну или в моменты позитивной волны, называю это эксклюзивностью💎) У меня всё
+ни как у людей🤷, том числе размер ноги👠. ⠀⠀
 ⠀
 У меня всегда был большой размер ноги👣, до лет 25 был 40👟. А потом рождение каждого ребёнка добавил мне ➕1. Теперь у меня 4️⃣2️⃣.
 ⠀
@@ -173,6 +174,8 @@
 	А теперь у меня новенькие красные зимние сапоги👢, и есть подозрения, что именно из-за этого зима не уходит❄️❄️❄️)))</p>
 А какой у вас размер ноги👣?
 
+	</div>
+</div>
 	</div>
 </div>
 
